monitoring/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.murabba.net`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: grafana-murabba-net-tls
