monitoring/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.murabba.net`)
      kind: Rule
      services:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
  tls:
    secretName: prometheus-murabba-net-tls
